--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,8 +4,8 @@
   "main": "server.js",
   "scripts": {
     "build": "npm install && npm install --prefix Frontend && npm run build --prefix Frontend",
-    "start": "nodemon Backend/server.js",
-    "dev": "nodemon Backend/server.js"
+    "start": "nodemon server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
