--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-node_modules
 .env
-PROJECT_SUMMARY.md 
-BACKEND_README.md 
+node_modules
+SETUP.md
+PROJECT_SUMMARY.md
+BACKEND_README.md
+DEPLOYMENT.md
